...
        floatingActionButton = {
            FloatingActionButton(
                onClick = onAddTaskClick,
                containerColor = MaterialTheme.colorScheme.primaryContainer,
                contentColor = MaterialTheme.colorScheme.onPrimaryContainer,
            ) {
                Icon(Icons.Default.Add, contentDescription = "Add Task")
            }
        },
    ) { padding ->
        Column(
            modifier =
                Modifier
...
private fun TasksTitle(
    visible: Boolean,
    modifier: Modifier = Modifier,
) {
    if (visible) {
        Text(
            text = "Tasks",
            style = MaterialTheme.typography.headlineSmall,
            maxLines = 1,
            modifier = modifier,
        )
    }
}
...
